# source_splitter

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/source_splitter/: __init__.py  __main__.py  ss_exceptions.py  ss_filesplitters.py  ss_items.py  ss_languages.py  ss_sourcefile.py
tests/: test_sslanguages.py
